# api

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  MANIFEST.in  README.md  cron_task.py  log.txt  manage.py  requirements-upgrade.txt  requirements.txt  setup.cfg  staging.Dockerfile
dev/: .env.example
docs/diagrams/: Locker.asta  locker_db.mwb  locker_db.mwb.bak
locker_server/: apps.py  settings.py
locker_server/api/: api_base_view.py  apps.py
locker_server/api/authentications/: token_authentication.py
locker_server/api/permissions/: app.py
locker_server/api/relay/: urls.py  views.py
locker_server/api/sub/: urls.py  views.py
locker_server/api/v1_0/: urls.py  views.py
locker_server/api/v1_admin/: urls.py  views.py
locker_server/api/v1_enterprise/: urls.py  views.py
locker_server/api/v1_micro_service/: urls.py  views.py
locker_server/api/websocket/: urls.py
locker_server/api_orm/: apps.py
locker_server/api_orm/fixtures/: country.json  e_member_role.json  e_ownership.json  mail_providers.json  member_role.json  mission.json  notification_category.json  plan.json  plan_type.json  saas_market.json  sso_providers.json
locker_server/api_orm/migrations/: 0001_initial.py  0002_educationemailorm.py  0003_auto_20231010_1609.py  0004_ssoconfigurationorm_ssoproviderorm.py  0005_auto_20231020_1641.py  0006_enterpriseorm_avatar.py  0007_alter_enterpriseorm_avatar.py  0008_backupcredentialorm.py  0009_alter_enterpriseorm_avatar.py  (+4 more)
locker_server/containers/: containers.py
locker_server/cron/: __init__.py  manage.py  task.py
locker_server/shared/: exception_handler.py  general_view.py  general_websocket_consumer.py
server_config/: __init__.py  asgi.py  routing.py  urls.py  wsgi.py
server_config/settings/: dev.py  prod.py  staging.py
src/: cron_task.py  manage.py  setup.py  tenant_context_cron_task.py  tenant_context_manage.py
src/core/: settings.py
src/cron/: __init__.py  manage.py  task.py
src/locker_statistic/: apps.py
src/micro_services/: apps.py  general_view.py  urls.py  views.py
src/relay/: apps.py  general_view.py  urls.py  views.py
src/server_config/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
src/shared/: exception_handler.py  general_view.py
src/v1_0/: apps.py  general_view.py  urls.py  views.py
src/v1_enterprise/: apps.py  urls.py  views.py
(+1286 files in other folders)
